@@ -8,6 +8,7 @@
 * Added `Avutil.Frame.{duration, set_duration}`
 * Reset metadata before setting new value.
 * Fix min/max filter option values for int and int64 type.
+* Add flush API to avfilter.
 
 1.1.7 (2023-02-08)
 =====
